Fixed PlaceSelector under navbar

--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@
     <section class="container-sm section content color-section">
       <div class="container-sm video-map text-center">
         <ul>
-          <li class="full-width mt-3">
-            <div id="player" class="video-div"></div>
+          <li class="list-item">
+            <div id="player" class="video-div mt-3"></div>
           </li>
-          <li class="full-width mt-1">
+          <li class="list-item mt-3">
             <div class="map-container">
               <div id="map" class="map-div"></div>
             </div>
