--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html">About</a>
+                  <a id="btnAbout" class="nav-link" href="about.html">About</a>
                 </li>
               </ul>
             </div>
