--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
-    <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
-    
+
+    <link
+      rel="shortcut icon"
+      href="assets/images/favicon.ico"
+      type="image/x-icon"
+    />
+    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon" />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -102,62 +106,64 @@
     <section
       class="container-sm section place-selector color-section text-center"
     >
-      <button
-        id="btnColosseum"
-        type="button"
-        class="btn btn-secondary btn-places mb-1"
-      >
-        <img src="assets/images/btnColosseumIco.png" alt="Colosseum" />
-        Colosseum
-      </button>
-      <button
-        id="btnChichen"
-        type="button"
-        class="btn btn-secondary btn-places mb-1"
-      >
-        <img src="assets/images/btnChichenIco.png" alt="Chichen Itza" />
-        Chichén Itzá
-      </button>
-      <button
-        id="btnMachuPichu"
-        type="button"
-        class="btn btn-secondary btn-places mb-1"
-      >
-        <img src="assets/images/btnMachu-PicchuIco.png" alt="Machupicchu" />
-        Machu Picchu
-      </button>
-      <button
-        id="btnChrist"
-        type="button"
-        class="btn btn-secondary btn-places mb-1"
-      >
-        <img src="assets/images/btnChristIco.png" alt="Christ Redeemer" />
-        Christ the Redeemer
-      </button>
-      <button
-        id="btnGreatWall"
-        type="button"
-        class="btn btn-secondary btn-places mb-1"
-      >
-        <img src="assets/images/btnChinaIco.png" alt="The Great Wall" />
-        The Great Wall of China
-      </button>
-      <button
-        id="btnPetra"
-        type="button"
-        class="btn btn-secondary btn-places mb-1"
-      >
-        <img src="assets/images/btnPetraIco.png" alt="Ruins of Petra" />
-        Ruins of Petra
-      </button>
-      <button
-        id="btnTajMahal"
-        type="button"
-        class="btn btn-secondary btn-places mb-1"
-      >
-        <img src="assets/images/btnTaj-MahalIco.png" alt="Taj-Mahal" />
-        Taj-Mahal
-      </button>
+      <div class="container place-buttons">
+        <button
+          id="btnColosseum"
+          type="button"
+          class="btn btn-secondary btn-places mb-1"
+        >
+          <img src="assets/images/btnColosseumIco.png" alt="Colosseum" />
+          Colosseum
+        </button>
+        <button
+          id="btnChichen"
+          type="button"
+          class="btn btn-secondary btn-places mb-1"
+        >
+          <img src="assets/images/btnChichenIco.png" alt="Chichen Itza" />
+          Chichén Itzá
+        </button>
+        <button
+          id="btnMachuPichu"
+          type="button"
+          class="btn btn-secondary btn-places mb-1"
+        >
+          <img src="assets/images/btnMachu-PicchuIco.png" alt="Machupicchu" />
+          Machu Picchu
+        </button>
+        <button
+          id="btnChrist"
+          type="button"
+          class="btn btn-secondary btn-places mb-1"
+        >
+          <img src="assets/images/btnChristIco.png" alt="Christ Redeemer" />
+          Christ the Redeemer
+        </button>
+        <button
+          id="btnGreatWall"
+          type="button"
+          class="btn btn-secondary btn-places mb-1"
+        >
+          <img src="assets/images/btnChinaIco.png" alt="The Great Wall" />
+          The Great Wall of China
+        </button>
+        <button
+          id="btnPetra"
+          type="button"
+          class="btn btn-secondary btn-places mb-1"
+        >
+          <img src="assets/images/btnPetraIco.png" alt="Ruins of Petra" />
+          Ruins of Petra
+        </button>
+        <button
+          id="btnTajMahal"
+          type="button"
+          class="btn btn-secondary btn-places mb-1"
+        >
+          <img src="assets/images/btnTaj-MahalIco.png" alt="Taj-Mahal" />
+          Taj-Mahal
+        </button>
+      </div>
     </section>
 
     <!--Section Content -->
