Add Contactus Section and button

--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
     <header>
       <nav id="navbar" class="navbar sticky-top navbar-expand-sm color-default">
         <div id="navbar-top-container" class="container-fluid navbar">
-          <a id="logo-link" class="navbar-brand color-default" href="">
+          <a id="logo-link" class="navbar-brand color-default" href="index.html">
             <img
               id="logo"
               class="logo"
@@ -61,7 +61,7 @@
             />
           </a>
           <div class="brand-name">
-            <a id="brand" class="brand-name" href="">
+            <a id="brand" class="brand-name" href="index.html">
               The 7 Wonders<br />
               of the Modern World
             </a>
@@ -93,6 +93,9 @@
                 </li>
                 <li class="nav-item">
                   <a id="btnAbout" class="nav-link active" href="about.html">About</a>
+                </li>
+                <li class="nav-item">
+                  <a id="btnContact" class="nav-link" href="#bottom">Contact</a>
                 </li>
               </ul>
             </div>
