Removed about page, using single page

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <header>
       <nav id="navbar" class="navbar sticky-top navbar-expand-sm color-default">
         <div id="navbar-top-container" class="container-fluid navbar">
-          <a id="logo-link" class="navbar-brand color-default" href="">
+          <a id="logo-link" class="navbar-brand color-default" href="#top">
             <img
               id="logo"
               class="logo"
@@ -71,7 +71,7 @@
             />
           </a>
           <div class="brand-name">
-            <a id="brand" class="brand-name" href="">
+            <a id="brand" class="brand-name" href="#top">
               The 7 Wonders<br />
               of the Modern World
             </a>
@@ -98,15 +98,15 @@
             >
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href=""
+                  <a class="nav-link active" aria-current="page" href="#top"
                     >Home</a
                   >
                 </li>
                 <li class="nav-item">
-                  <a id="btnAbout" class="nav-link" href="about.html">About</a>
+                  <a id="btnAbout" class="nav-link" href="#about">About</a>
                 </li>
                 <li class="nav-item">
-                  <a id="btnContact" class="nav-link" href="#bottom">Contact</a>
+                  <a id="btnContact" class="nav-link" href="#contact">Contact</a>
                 </li>
               </ul>
             </div>
@@ -185,6 +185,9 @@
         <ul>
           <li class="list-item">
             <div id="player" class="video-div mt-3"></div>
+          </li>
+          <li>
+            <div id="about"></div>
           </li>
           <li class="list-item mt-3">
             <div class="map-container">
