--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
         <h5 class="uppercase text-center contact-title mt-2">Contact us!</h5>
 
         <div class="center-form contact-form">
-          <form onsubmit="return sendEmail(this);">
+          <form id="contactForm" onsubmit="return sendEmail(this);">
             <input
               type="text"
               name="name"
