Removing old comments and fixing comments and code indentation

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       integrity="sha512-JmpptMCcCg+Rd6x0Dbg6w+mmyzs1M7chHCd9W8HPovnImG2nLAQWn3yltwxXRM7WjKKFFHOAKjjF2SC4CgiFBg=="
       crossorigin=""
     ></script>
-
+    <!-- Init EmailJS -->
     <script
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"
@@ -106,7 +106,9 @@
                   <a id="btnAbout" class="nav-link" href="#about">About</a>
                 </li>
                 <li class="nav-item">
-                  <a id="btnContact" class="nav-link" href="#contact">Contact</a>
+                  <a id="btnContact" class="nav-link" href="#contact"
+                    >Contact</a
+                  >
                 </li>
               </ul>
             </div>
@@ -250,9 +252,6 @@
           </div>
         </div>
 
-        <!--
-            <div class="place-img"><img src="assets/images/colosseum.jpg" alt="colosseum"></div>
-            -->
         <div class="col-sm-12 col-md-12 text-center place social-links mt-2">
           <ul class="list-inline social-links">
             <li class="list-inline-item">
@@ -290,6 +289,7 @@
       </div>
     </section>
 
+    <!-- Button-to-top -->
     <section class="btn-to-top">
       <!--Credit: https://www.w3schools.com/howto/howto_js_scroll_to_top.asp-->
       <div class="back-top">
@@ -304,8 +304,7 @@
       </div>
     </section>
 
-    <!--<div class="section-bkg"></div>-->
-
+    <!-- Section Contact -->
     <section class="container-sm section contact color-section">
       <div class="col mb-5">
         <h5 class="uppercase text-center contact-title mt-2">Contact us!</h5>
@@ -352,6 +351,7 @@
       </div>
     </section>
 
+    <!-- Footer -->
     <footer class="container-fluid footer color-default">
       <div class="row footer-items">
         <div class="col-sm-12 col-md-12 text-center social-links">
