Changed Developer links, add Readme and Images link

--- a/index.html
+++ b/index.html
@@ -357,27 +357,21 @@
         <div class="col-sm-12 col-md-12 text-center social-links">
           <ul class="list-inline social-links">
             <li class="list-inline-item">
-              <a href="https://github.com/brunobdias" target="_blank">
+              <a href="https://github.com/brunobdias/" target="_blank">
                 <i class="fab fa-github" aria-hidden="true"></i>
                 <span class="sr-only">Github</span>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://www.instagram.com/" target="_blank">
-                <i class="fab fa-instagram" aria-hidden="true"></i>
-                <span class="sr-only">Instagram</span>
+              <a href="https://github.com/brunobdias/Ms2/#readme" target="_blank">
+                <i class="far fa-file-alt" aria-hidden="true"></i>
+                <span class="sr-only">Project Images</span>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://www.facebook.com/hashtag/" target="_blank">
-                <i class="fab fa-facebook" aria-hidden="true"></i>
+              <a href="https://github.com/brunobdias/Ms2/blob/master/images.md" target="_blank">
+                <i class="fas fa-images" aria-hidden="true"></i>
                 <span class="sr-only">Facebook</span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://www.youtube.com/" target="_blank">
-                <i class="fab fa-youtube" aria-hidden="true"></i>
-                <span class="sr-only">Youtube</span>
               </a>
             </li>
           </ul>
@@ -409,7 +403,7 @@
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"
     ></script>
-    
+
     <script src="assets/js/script.js"></script>
     <script src="assets/js/restCountries.js"></script>
     <script src="assets/js/leaflet.js"></script>
