--- a/index.html
+++ b/index.html
@@ -365,13 +365,13 @@
             <li class="list-inline-item">
               <a href="https://github.com/brunobdias/Ms2/#readme" target="_blank">
                 <i class="far fa-file-alt" aria-hidden="true"></i>
-                <span class="sr-only">Project Images</span>
+                <span class="sr-only">Project Readme</span>
               </a>
             </li>
             <li class="list-inline-item">
               <a href="https://github.com/brunobdias/Ms2/blob/master/images.md" target="_blank">
                 <i class="fas fa-images" aria-hidden="true"></i>
-                <span class="sr-only">Facebook</span>
+                <span class="sr-only">Project Images</span>
               </a>
             </li>
           </ul>
