--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
         <div class="col-sm-12 col-md-12 text-center social-links">
           <ul class="list-inline social-links">
             <li class="list-inline-item">
-              <a href="https://github.com/brunobdias/" target="_blank">
+              <a href="https://github.com/brunobdias/Ms2" target="_blank">
                 <i class="fab fa-github" aria-hidden="true"></i>
                 <span class="sr-only">Github</span>
               </a>
